전체 컨텐츠 정렬 수정 중

--- a/assets/lib/css/less/uk_sub.less
+++ b/assets/lib/css/less/uk_sub.less
@@ -274,6 +274,9 @@
 	&:hover img {transform:translate(-50%, -50%) scale(1.2, 1.2);}
 }
 
+.color_keyword_ex {
+	span {padding:0 3px;}
+}
 
 .flex_direction_compare {
 	.clear;
