전체 컨텐츠 정렬 수정 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -111,6 +111,12 @@ mark {
 */
 
 
+
+.el_block {display:block;}
+.el_inline_block {display:inline-block;}
+
+
+
 //responsive display
 .dp_pc {display:block !important;}
 .dp_ib_pc {display:inline-block !important;}
