전체 컨텐츠 정렬 수정 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -40,7 +40,7 @@ footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, a
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, main {display:block;}
 body {line-height:1;}
 ol, ul li {list-style:none;}
-i {font-style:normal;}
+i, em {font-style:normal;}
 blockquote, q {quotes:none;}
 blockquote:before, blockquote:after, q:before, q:after {content:'';}
 table {border-collapse:collapse; border-spacing:0;}
