--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2293,7 +2293,7 @@
 		strong code {font-weight:bold;}
 
 		h1 {
-			line-height:32px; font-size:28px; color:@navy; letter-spacing:-1px;
+			line-height:34px; font-size:30px; color:@navy; letter-spacing:-1px;
 			//i {color:#888;}
 			i {color:@blue;}
 		}
@@ -2305,12 +2305,13 @@
 		}
 		.last_update {
 			display:inline-block;
-			height:22px; line-height:22px; margin:10px 0 0 0; padding:0 15px;
+			height:22px; line-height:22px; margin:12px 0 0 0; padding:0 15px;
 			.font-en; font-size:13px; color:#888; font-weight:500; letter-spacing:-0.3px;
 			background:#eee; border-radius:100px;
 			&:before {margin-right:6px; content:"Last Updated on";}
 		}
 		h2 {line-height:32px; font-size:22px; color:@navy; letter-spacing:-1px;}
+		//h2:before {font-size:20px;}
 		h2 code {font-size:24px;}
 		h2.html5:after {
 			margin:0 0 0 7px;
@@ -2330,6 +2331,18 @@
 		h4 {line-height:24px; font-size:16px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 		h5 {line-height:22px; font-size:15px; color:fade(@navy, 90%); letter-spacing:-0.3px;/* .weight-500;*/}
 		h6 {line-height:22px; font-size:14px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
+
+		//heading line-height, font-size
+		h2 {line-height:32px; font-size:22px;}
+		h2.ve_tit:before {font-size:20px; margin-top:1px;}
+		h3 {line-height:28px; font-size:18px;}
+		h3.ve_tit:before {font-size:16px; margin-top:1px;}
+		h4 {line-height:24px; font-size:16px;}
+		h4.ve_tit:before {font-size:15px; margin-top:1px;}
+		h5 {line-height:22px; font-size:15px;}
+		h5.ve_tit:before {font-size:14px; margin-top:1px;}
+		h6 {line-height:22px; font-size:14px;}
+		h6.ve_tit:before {font-size:13px; margin-top:1px;}
 	}
 	@media(max-width:@screen-md-max){
 		.content_area {
@@ -2360,6 +2373,18 @@
 			h4 {line-height:20px; font-size:15px;}
 			h5 {line-height:20px; font-size:14px;}
 			h6 {line-height:20px; font-size:13px;}
+
+			//heading line-height, font-size
+			h2 {line-height:@h2_h; font-size:18px;}
+			h2.ve_tit:before {font-size:16px; margin-top:0;}
+			h3 {line-height:22px; font-size:16px;}
+			h3.ve_tit:before {font-size:14px; margin-top:1px;}
+			h4 {line-height:20px; font-size:15px;}
+			h4.ve_tit:before {font-size:13px; margin-top:0;}
+			h5 {line-height:20px; font-size:14px;}
+			h5.ve_tit:before {font-size:12px; margin-top:1px;}
+			h6 {line-height:20px; font-size:13px;}
+			h6.ve_tit:before {font-size:11px; margin-top:1px;}
 		}
 	}
 	@media(max-width:@screen-xxs){
@@ -2574,11 +2599,12 @@
 		.ve_tit {
 			position:relative;
 			//line-height:24px; font-size:18px;
-			padding-left:20px;
+			//padding-left:20px;
 			.font-kr; color:@blue; font-weight:700;
 			&:before {
+				display:inline-block; vertical-align:top;
 				position:absolute; left:0; top:0;
-				margin:0 8px 0 0;
+				//margin:0 8px 0 0;
 				.font-icon;
 				content:"\f1c9";
 			}
@@ -2586,6 +2612,16 @@
 				//line-height:32px; padding-left:26px; font-size:22px;
 			}
 		}
+		h2.ve_tit {padding-left:22px;}
+		h3.ve_tit {padding-left:18px;}
+		h4.ve_tit {padding-left:16px;}
+		h5.ve_tit {padding-left:15px;}
+		h6.ve_tit {padding-left:14px;}
+		h2.ve_tit:before {margin-right:8px;}
+		h3.ve_tit:before {margin-right:7px;}
+		h4.ve_tit:before {margin-right:6px;}
+		h5.ve_tit:before {margin-right:5px;}
+		h6.ve_tit:before {margin-right:5px;}
 
 		&.ex_code .ve_tit {color:@green;}
 		&.ex_code.ex_wrong .ve_tit {color:@red;}
@@ -2595,13 +2631,18 @@
 	@media(max-width:@screen-sm-max){
 		.view_editor {
 			.ve_tit {
-				line-height:22px;
-				font-size:15px;
-				&:before {margin:1px 6px 0 0;}
+				//line-height:22px; font-size:15px;
+				//&:before {margin:1px 6px 0 0;}
 				&.tit_h2 {
-					line-height:24px; padding-left:22px; font-size:18px;
+					//line-height:24px; padding-left:22px; font-size:18px;
 				}
 			}
+			h2.ve_tit {padding-left:18px;}
+			h3.ve_tit {padding-left:16px;}
+			h4.ve_tit {padding-left:15px;}
+			h5.ve_tit {padding-left:14px;}
+			h6.ve_tit {padding-left:13px;}
+
 			.uk_editor {margin-top:10px;}
 		}
 	}
