--- a/assets/lib/css/ayu-mirage.css
+++ b/assets/lib/css/ayu-mirage.css
@@ -1,26 +1,23 @@
 /* Based on https://github.com/dempfi/ayu */
-.cm-s-ayu-mirage {
-  /*.cm-s-ayu-mirage span.cm-bracket { color: rgba(92, 207, 230, 80); }*/
-}
 .cm-s-ayu-mirage.CodeMirror {
-  background: #1f2430;
-  color: #cbccc6;
+  background: #1a1d28;
+  color: #ccc;
 }
 .cm-s-ayu-mirage div.CodeMirror-selected {
-  background: #34455a;
+  background: #214283;
 }
 .cm-s-ayu-mirage .CodeMirror-line::selection,
 .cm-s-ayu-mirage .CodeMirror-line > span::selection,
 .cm-s-ayu-mirage .CodeMirror-line > span > span::selection {
-  background: #34455a;
+  background: #214283;
 }
 .cm-s-ayu-mirage .CodeMirror-line::-moz-selection,
 .cm-s-ayu-mirage .CodeMirror-line > span::-moz-selection,
 .cm-s-ayu-mirage .CodeMirror-line > span > span::-moz-selection {
-  background: #191e2a;
+  background: #214283;
 }
 .cm-s-ayu-mirage .CodeMirror-gutters {
-  background: #1f2430;
+  background: #1a1d28;
   border-right: 0;
 }
 .cm-s-ayu-mirage .CodeMirror-guttermarker {
@@ -30,20 +27,22 @@
   color: #707a8c;
 }
 .cm-s-ayu-mirage .CodeMirror-linenumber {
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.25);
 }
 .cm-s-ayu-mirage .CodeMirror-cursor {
-  border-left: 1px solid #ffcc66;
+  height: 20px !important;
+  margin: 2px 0;
+  border-left: 2px solid #ccc;
 }
 .cm-s-ayu-mirage span.cm-comment {
-  color: #5c6773;
+  color: #677079;
   font-style: italic;
 }
 .cm-s-ayu-mirage span.cm-atom {
-  color: #ae81ff;
+  color: #a8d589;
 }
 .cm-s-ayu-mirage span.cm-number {
-  color: #ffcc66;
+  color: #5fb9e3;
 }
 .cm-s-ayu-mirage span.cm-comment.cm-attribute {
   color: #ffd580;
@@ -52,31 +51,31 @@
   color: #d4bfff;
 }
 .cm-s-ayu-mirage span.cm-comment.cm-tag {
-  color: #5ccfe6;
+  color: #93b6ff;
 }
 .cm-s-ayu-mirage span.cm-comment.cm-type {
   color: #5998a6;
 }
 .cm-s-ayu-mirage span.cm-property {
-  color: #f29e74;
+  color: #ccd9dc;
 }
 .cm-s-ayu-mirage span.cm-attribute {
-  color: #ffd580;
+  color: #ccc;
 }
 .cm-s-ayu-mirage span.cm-keyword {
-  color: #ffa759;
+  color: #e7862f;
 }
 .cm-s-ayu-mirage span.cm-builtin {
   color: #ffcc66;
 }
 .cm-s-ayu-mirage span.cm-string {
-  color: #bae67e;
+  color: #a8d589;
 }
 .cm-s-ayu-mirage span.cm-variable {
-  color: #cbccc6;
+  color: #d07fe5;
 }
 .cm-s-ayu-mirage span.cm-variable-2 {
-  color: #f28779;
+  color: #ccc;
 }
 .cm-s-ayu-mirage span.cm-variable-3 {
   color: #5ccfe6;
@@ -88,7 +87,7 @@
   color: #ffd580;
 }
 .cm-s-ayu-mirage span.cm-tag {
-  color: #5ccfe6;
+  color: #93b6ff;
 }
 .cm-s-ayu-mirage span.cm-header {
   color: #bae67e;
@@ -97,13 +96,20 @@
   color: #5ccfe6;
 }
 .cm-s-ayu-mirage span.cm-error {
-  color: #ff3333;
+  color: #ff6161;
 }
 .cm-s-ayu-mirage span.cm-bracket {
-  color: #bbb;
+  color: #ccd9dc;
 }
-.cm-s-ayu-mirage .CodeMirror-activeline-background {
-  background: #191e2a;
+.cm-s-ayu-mirage span.cm-matchhighlight {
+  background: rgba(255, 0, 0, 0.1);
+}
+.cm-s-ayu-mirage .CodeMirror-activeline-background,
+.cm-s-ayu-mirage .CodeMirror-activeline-gutter {
+  background: #2a2f41;
+}
+.cm-s-ayu-mirage .CodeMirror-activeline-gutter .CodeMirror-gutter-elt {
+  color: rgba(255, 255, 255, 0.7);
 }
 .cm-s-ayu-mirage .CodeMirror-matchingbracket {
   text-decoration: underline;
@@ -111,7 +117,7 @@
 }
 .cm-s-ayu-mirage .CodeMirror-linenumbers,
 .cm-s-ayu-mirage .CodeMirror-gutter-wrapper {
-  width: 44px !important;
+  width: 42px !important;
   padding-right: 8px;
   box-sizing: border-box;
   text-align: right;
@@ -122,6 +128,15 @@
   padding-right: 4px;
   font-size: 13px;
   box-sizing: border-box;
+}
+@media (max-width: 1201px) {
+  .cm-s-ayu-mirage .CodeMirror-cursor {
+    height: 16px !important;
+  }
+  .cm-s-ayu-mirage .CodeMirror-linenumbers,
+  .cm-s-ayu-mirage .CodeMirror-gutter-wrapper {
+    width: 38px !important;
+  }
 }
 /*
 .cm-s-ayu-mirage.CodeMirror { background: #1f2430; color: #cbccc6; }
